src/main/java/org/alex/example/fitnessmanagement/error/NotFoundByNameException.java
package org.alex.example.fitnessmanagement.error;

public class NotFoundByNameException extends BusinessFitnessException {
    public NotFoundByNameException(String message) {
        super(message);
    }
}
